@@ -14,6 +14,8 @@ Major changes since the last stable (1.8.2) release are:
   ;term;definition.  You can use this to make comments, too, by using
   an empty 'term': ;:Comment.
 
+- There is a new variable system, documented in WikiVariables.
+
 - New plugins:
    * IndexPlugin (by Alain Ravet)
 
